--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       <p><i class="material-icons">calendar_today</i> October 30</p>
       <p><i class="material-icons">location_city</i> San Francisco</p>
+      <button id="startRsvp">RSVP</button>
   </section>
 
   <hr>
@@ -31,7 +32,17 @@
   </section>
 
   <section id="guestbook-container">
-  </section>
+   <h2>Discussion</h2>
 
+   <form id="leave-message">
+     <label>Leave a message: </label>
+     <input type="text" id="message">
+     <button type="submit">
+       <i class="material-icons">send</i>
+       <span>SEND</span>
+     </button>
+   </form>
+ </section>
+   <section id="guestbook"></section>
 </div>
 </body>
